--- a/Assets/style.css
+++ b/Assets/style.css
@@ -28,7 +28,7 @@
 	font-display: swap;
 	src: local( 'Source Code Pro' ),
 	     local( 'SourceCodePro-Semibold' ), 
-	     url(   'fonts/SourceCodePro-Semibold-Latin.woff2' ) format( 'woff2' );
+	     url(   'fonts/SourceCodePro-SemiBold-Latin.woff2' ) format( 'woff2' );
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -134,6 +134,7 @@ pre {
 	margin:  10px 0 10px -15px;
 	padding:  5px 15px;
 	line-height:  18px;
+	tab-size: 4;
 }
 pre, code, samp {
 
