--- a/Assets/style.css
+++ b/Assets/style.css
@@ -132,6 +132,7 @@ strong {
 pre {
 
 	margin:  12px 0 12px -16px;
+	border-radius: 8px;
 	padding:  8px 16px;
 	line-height:  20px;
 	tab-size: 4;
@@ -286,8 +287,10 @@ main a {
 table {
 
 	margin: 20px 0 20px -15px;
+	border-radius: 16px;
 	border-collapse: collapse;
 	background-color: #F6F6F6;
+	overflow: hidden;
 }
 td {
 
