--- a/Assets/style.css
+++ b/Assets/style.css
@@ -48,6 +48,7 @@
 	--internal-link-color: #0366D6;
 	--external-link-color: var( --text-color );
 	--fill-color: var( --text-color );
+	--comment-color: #999;
 }
 * {
 
@@ -128,6 +129,25 @@ strong {
 
 	font-weight: 600;
 }
+small {
+
+	font-size: 0.8em;
+	letter-spacing: 0.02em;
+}
+sup, sub {
+
+	vertical-align: baseline;
+	position: relative;
+	top: -0.4em;
+}
+sub { 
+
+	top: 0.4em; 
+}
+
+
+
+
 pre {
 
 	margin:  12px 0 12px -16px;
@@ -155,20 +175,9 @@ pre code {
 	margin:  0;
 	padding: 0;
 }
-small {
+code .comment {
 
-	font-size: 0.8em;
-	letter-spacing: 0.02em;
-}
-sup, sub {
-
-	vertical-align: baseline;
-	position: relative;
-	top: -0.4em;
-}
-sub { 
-
-	top: 0.4em; 
+	color: var( --comment-color );
 }
 
 
