--- a/Assets/style.css
+++ b/Assets/style.css
@@ -127,24 +127,30 @@ dd {
 
 	display: inline;
 }
-
-
 p + p {
 
 	text-indent: 24px;
 }
 hr {
 
-	margin: 48px 0;
-	height: 0px;
-	border-top: 1px solid #DDD;
+	margin: 72px 0 12px 0;
+	height: 1px;
+	background-color: #CCC;
 	padding: 0;
+}
+hr + h3 {
+
+	padding-top: 4px;
 }
 ul.properties li {
 
 	list-style: none;
-	margin-top: 24px;
+	margin-top: 12px;
 	padding-left: 24px;
+}
+ul.properties pre {
+
+	margin-left: 0;
 }
 strong {
 
@@ -184,9 +190,9 @@ sub {
 
 pre {
 
-	margin:  12px 0 12px -16px;
+	margin: 12px 0   12px -24px;
 	border-radius: 8px;
-	padding:  8px 16px;
+	padding:  0  6px 24px  24px;
 	line-height:  20px;
 	tab-size: 4;
 	overflow: auto;
@@ -344,7 +350,7 @@ main a {
 
 table {
 
-	margin: 20px 0 20px -15px;
+	margin: 20px 0 20px -24px;
 	border-radius: 16px;
 	border-collapse: collapse;
 	background-color: #F6F6F6;
