--- a/Assets/style.css
+++ b/Assets/style.css
@@ -382,7 +382,7 @@ main {
 	overflow: auto;
 	max-width: 620px;
 }
-main p, main h2, main h3, main h4, main ul {
+main > p, main > h2, main > h3, main > h4, main > ul {
 
 	margin: 0 20px;
 }
@@ -476,69 +476,6 @@ dd {
 }
 
 
-
-
-.interactive-container {
-	
-	position: relative;
-	margin: 12px 0;
-	width:  100%;
-	height: 240px;	
-	padding-bottom: calc( 100% + 24px );
-	overflow: hidden;
-}
-.interactive-container canvas {
-
-	position: absolute;
-	top: 0;
-	left: 0;
-	border-radius: 16px;
-	width:  100%;
-	height: 100%;
-	background-color: var( --background-callout-color );
-	overflow: hidden;
-}
-.interactive-component {
-
-	position: absolute;
-	top:  24px;
-	left: 24px;
-	z-index: 999;
-}
-
-
-
-
-.qubit-container {
-
-	display: inline-block;
-	/*width: 120px; */
-	/*margin: 8px;*/
-	text-align: center;
-}
-.qubit-container p {
-
-	font-size:   12px;
-	line-height: 18px;
-}
-.qubit {
-
-	display: inline-block;
-	margin: 4px;
-	border: 1px solid #DDD;
-	border-radius: 2px;
-	padding: 8px 16px;
-	text-align: center;
-	font-weight: bold;
-	font-style: italic;
-	cursor: pointer;
-	color: var( --internal-link-color );
-}
-.qubit-container.selected .qubit {
-
-	background-color: #EEE;
-	color: #000;
-}
 
 
 
@@ -837,6 +774,149 @@ table#console-open-commands .na {
 	line-height: 38px;
 	box-shadow: 0 1px 2px #666;
 }
+
+
+
+
+
+
+    /*****************/
+   /*               */
+  /*    Quantums   */
+ /*               */
+/*****************/
+
+
+.interactive-container {
+	
+	position: relative;
+	margin: 12px 0;
+	width:  100%;
+	height: 240px;	
+	padding-bottom: calc( 100% + 24px );
+	overflow: hidden;
+}
+.interactive-container canvas {
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-radius: 16px;
+	width:  100%;
+	height: 100%;
+	background-color: var( --background-callout-color );
+	overflow: hidden;
+}
+.interactive-component {
+
+	position: absolute;
+	top:  24px;
+	left: 24px;
+	z-index: 999;
+}
+
+
+
+
+#bloch-sphere-qubits {
+
+	margin-top: 15px;
+}
+.qubit-container {
+
+	display: inline-block;
+	margin:  0px 10px 10px 0;
+	width:  80px; 
+	height: 120px;
+	border-radius: 8px;
+	padding-top:   6px;
+	text-align: center;
+	overflow: hidden;
+	cursor: pointer;
+	background-color: var( --background-callout-color );
+	transition: background-color 0.5s;
+}
+.qubit-container:hover {
+	
+	background-color: #DDD;
+	transition: background-color 0s;
+}
+.qubit-container.selected {
+	
+	background-color: #BBB;
+	/*color: #FFF;*/
+}
+.qubit-container p {
+
+	font-size:   12px;
+	line-height: 18px;
+}
+.qubit {
+
+	display: inline-block;
+	margin:  4px 0 4px 0;
+	width:  40px;
+	height: 40px;
+	border:  1px solid #BBB;
+	border-radius: 100%;
+	background-color: #FFF;
+	text-align: center;
+	font-weight: bold;
+	line-height: 37px;
+	color: #000;
+}
+
+
+
+
+#bloch-sphere-gates {
+
+	margin-top: 15px;
+}
+.gate-container {
+
+	display: inline-block;
+	margin:  0 5px 5px 0;
+	width:  80px; 
+	height: 80px;
+	border-radius: 8px;
+	padding-top:   6px;
+	text-align: center;
+	overflow: hidden;
+	cursor: pointer;
+	background-color: var( --background-callout-color );
+	transition: background-color 0.5s;
+}
+.gate-container:hover {
+	
+	background-color: #DDD;
+	transition: background-color 0s;
+}
+.gate-container.selected {
+	
+	background-color: #BBB;
+	/*color: #FFF;*/
+}
+.gate-container p {
+
+	font-size:   12px;
+	line-height: 18px;
+}
+.gate {
+
+	display: inline-block;
+	margin:  4px 0 4px 0;
+	width:  40px;
+	height: 40px;
+	border:  1px solid #BBB;
+	background-color: #FFF;
+	text-align: center;
+	font-weight: bold;
+	line-height: 37px;
+	color: #000;
+}
+
+
 
 
 
