--- a/Assets/style.css
+++ b/Assets/style.css
@@ -520,7 +520,7 @@ dd .maths {
 }
 .division td {
 
-	padding: 10px;
+	padding: 5px;
 }
 .dividend {
 
@@ -814,6 +814,185 @@ table#console-open-commands .na {
 	left: 24px;
 	z-index: 999;
 }
+
+
+
+
+.unit-circle {
+
+	position: relative;
+	display: inline-block;
+	margin: 30px 0 20px 20px;
+	top:   50%;
+	width: 60%;
+	padding-bottom: 60%;
+
+	/*
+
+		Some day soon we’ll be able to use trug functions in CSS:;
+		https://github.com/w3c/csswg-drafts/issues/2331#issuecomment-467990627   
+		https://en.wikipedia.org/wiki/Unit_circle#/media/File:Unit_circle_angles_color.svg
+
+		Deg   Rad    Sine     Cosine
+
+		  0˚   0     0        1
+		 45˚   π÷4   0.7071   0.7071
+		 90˚   π÷2   1        0
+		135˚  3π÷4   0.7071  -0.7071
+		180˚   π     0       -1
+		225˚  5π÷4  -0.7071  -0.7071
+		270˚  3π÷2  -1        0
+		315˚  7π÷4  -0.7071   0.7071
+
+	*/
+
+	--sine-0deg:    0;
+	--sine-45deg:   0.7071;
+	--sine-90deg:   1;
+	--sine-135deg:  0.7071;
+	--sine-180deg:  0;	
+	--sine-225deg: -0.7071;
+	--sine-270deg: -1;
+	--sine-315deg: -0.7071;
+
+	--cosine-0deg:    1;
+	--cosine-45deg:   0.7071;
+	--cosine-90deg:   0;
+	--cosine-135deg: -0.7071;
+	--cosine-180deg: -1;
+	--cosine-225deg: -0.7071;
+	--cosine-270deg:  0;
+	--cosine-315deg:  0.7071;
+
+	--radius: 50%;
+}
+
+
+.unit-circle-outline {
+
+	position: absolute;
+	top:  0;
+	left: 0;
+	border: 1px solid #DDD;
+	border-radius: 100%;
+	width:  100%;
+	height: 100%;
+}
+.unit-circle-spoke {
+
+	position: absolute;
+	top:    50%;
+	left:    0;
+	width: 100%;
+	height:  1px;
+	background-color: #EEE;
+}
+.unit-circle-spoke-45 {
+
+	/*transform: rotate( 45deg );*/
+	transform: rotate( 0.125turn );
+}
+.unit-circle-spoke-90 {
+
+	/*transform: rotate( 90deg );*/
+	transform: rotate( 0.25turn );
+}
+.unit-circle-spoke-135 {
+
+	/*transform: rotate( 135deg );*/
+	transform: rotate( 0.375turn );
+}
+
+
+.unit-circle-spoke-label {
+
+	position: absolute;
+	margin-top: 50%;
+	width: 100%;
+	padding-right: 15%;
+	text-align: right;
+	transform: translate( 0, -50% );
+}
+.unit-circle-spoke-label-45 {
+
+	transform: translate( 0, -50% ) rotate( -45deg );
+}
+.unit-circle-spoke-label-90 {
+
+	transform: translate( 0, -50% ) rotate( -90deg );
+}
+.unit-circle-spoke-label-315 {
+
+	transform: translate( 0, -50% ) rotate( -315deg );
+}
+
+
+.unit-circle-label {
+
+	position: absolute;
+	margin: 50% 0 0 50%;
+	transform: translate( -50%, -50% );
+	white-space: nowrap;
+}
+.unit-circle-label-0 {
+
+	top:  calc( var( --radius ) * var( --sine-0deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-0deg ));
+}
+.unit-circle-label-45 {
+
+	top:  calc( var( --radius ) * var( --sine-45deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-45deg ));
+}
+.unit-circle-label-90 {
+
+	top:  calc( var( --radius ) * var( --sine-90deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-90deg ));
+}
+.unit-circle-label-135 {
+
+	top:  calc( var( --radius ) * var( --sine-135deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-135deg ));
+}
+.unit-circle-label-180 {
+
+	top:  calc( var( --radius ) * var( --sine-180deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-180deg ));
+}
+.unit-circle-label-225 {
+
+	top:  calc( var( --radius ) * var( --sine-225deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-225deg ));
+}
+.unit-circle-label-270 {
+
+	top:  calc( var( --radius ) * var( --sine-270deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-270deg ));
+}
+.unit-circle-label-315 {
+
+	top:  calc( var( --radius ) * var( --sine-315deg ) * -1 );
+	left: calc( var( --radius ) * var( --cosine-315deg ));
+}
+
+.unit-circle .division {
+
+	display: inline-block;
+	vertical-align: middle;
+	margin: 2px;
+}
+.unit-circle .division td {
+
+	padding: 1px;
+}
+.unit-circle .dividend {
+
+	border-bottom: 1px solid #666;
+}
+
+
+
+
 
 
 
