Oops on the hash-target.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -429,7 +429,7 @@ td:hover {
 */
 .hash-target {
 
-	padding: 2px 0;
+	/*padding: 2px 0;*/
 	animation-duration: 1s;
 	animation-name: hash-target-blink;
 	animation-iteration-count: 2;
